micronfig_macros/tests/sources/wrong_start.stderr
error: first type of a conversion chain should always be `String`
 --> tests/sources/wrong_start.rs:2:13
  |
2 |     GARASAUTO: i64,
  |                ^^^

error[E0425]: cannot find function, tuple struct or tuple variant `GARASAUTO` in this scope
 --> tests/sources/wrong_start.rs:6:19
  |
6 |     println!("{:?}", GARASAUTO())
  |                      ^^^^^^^^^ not found in this scope
