micronfig_macros/tests/sources/wrong_start.rs
micronfig::config! {
	GARASAUTO: i64,
}

fn main() {
	println!("{:?}", GARASAUTO())
}
